--- a/package.json
+++ b/package.json
@@ -2,15 +2,32 @@
   "name": "landing-backend",
   "version": "0.0.0",
   "private": true,
+  "description": "Backend for the landing page of the Project",
+  "homepage": "https://github.com/spicy-develops/landing-backend#readme",
+  "bugs": {
+    "url": "https://github.com/spicy-develops/landing-backend/issues"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/spicy-develops/landing-backend.git"
+  },
+  "license": "ISC",
+  "author": "",
+  "type": "commonjs",
+  "main": "app.js",
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "node index.js",
+    "server": "nodemon index.js"
   },
   "dependencies": {
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
+    "dotenv": "^16.4.7",
     "express": "~4.16.1",
     "http-errors": "~1.6.3",
     "jade": "~1.11.0",
-    "morgan": "~1.9.1"
+    "mongoose": "^8.12.1",
+    "morgan": "~1.9.1",
+    "nodemon": "^3.1.9"
   }
 }
