--- a/package.json
+++ b/package.json
@@ -16,8 +16,9 @@
   "type": "commonjs",
   "main": "app.js",
   "scripts": {
-    "start": "node index.js",
-    "server": "nodemon index.js"
+    "start": "node src/server.js",
+    "dev": "nodemon src/server.js",
+    "dev:local": "nodemon src/server-local.js"
   },
   "dependencies": {
     "cookie-parser": "~1.4.4",
@@ -30,6 +31,16 @@
     "jade": "^0.29.0",
     "mongoose": "^8.12.1",
     "morgan": "~1.9.1",
-    "nodemon": "^3.1.9"
+    "nodemon": "^3.1.9",
+    "pino": "^9.6.0",
+    "pino-pretty": "^13.0.0",
+    "serverless-http": "^3.2.0"
+  },
+  "devDependencies": {
+    "@eslint/js": "^9.22.0",
+    "eslint": "^9.22.0",
+    "eslint-plugin-react": "^7.37.4",
+    "globals": "^16.0.0",
+    "prettier": "3.5.3"
   }
 }
