--- a/package.json
+++ b/package.json
@@ -18,15 +18,18 @@
   "scripts": {
     "start": "node src/server.js",
     "dev": "nodemon src/server.js",
-    "dev:local": "nodemon src/server-local.js"
+    "dev:local": "nodemon src/server-local.js",
+    "test:ci-cd": "newman run APIs_POSTMAN.json -e env_APIs_POSTMAN.json"
   },
   "dependencies": {
+    "@aws-sdk/client-ssm": "^3.759.0",
     "cookie-parser": "~1.4.4",
     "cors": "^2.8.5",
     "debug": "~2.6.9",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "express-async-handler": "^1.2.0",
+    "helmet": "^8.0.0",
     "http-errors": "~1.6.3",
     "jade": "^0.29.0",
     "mongoose": "^8.12.1",
